...
        android:textColor="@color/darkBlueTextColor"
        android:textSize="@dimen/edit_text_size_20"
        android:includeFontPadding="false"
        android:fontFamily="@font/source_sans_pro_semibold" />

    <com.dcrnandroid.view.PasswordInput
        android:id="@+id/password_input"
        android:layout_marginTop="@dimen/margin_padding_size_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
...
            android:layout_height="wrap_content"
            style="@style/textViewButton.Outline"
            android:text="@string/cancel"
            android:layout_marginEnd="@dimen/margin_padding_size_8" />

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textViewButton"
            android:enabled="false"
            android:text="@string/confirm" />

...
