...
        android:text="@string/create_spending_pass"
        android:textColor="@color/darkBlueTextColor"
        android:textSize="@dimen/edit_text_size_20"
        android:fontFamily="@font/source_sans_pro_semibold" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        style="@style/TabLayoutStyle"
        app:tabRippleColor="@color/whiteRipple"
        app:tabTextColor="#596d81"
        app:tabSelectedTextColor="@color/blue"
        android:layout_marginTop="@dimen/margin_padding_size_8"
        android:layout_width="match_parent"
...
