...
        android:paddingTop="@dimen/margin_padding_size_32"
        android:paddingStart="@dimen/margin_padding_size_40"
        android:paddingEnd="0dp"
        android:orientation="horizontal">

        <com.dcrnandroid.view.PinView
            android:id="@+id/pin_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_padding_size_96"
            android:layout_weight="1" />

        <TextView
...
