...
            android:id="@+id/bottom_bar_layout"
            android:visibility="gone"
            android:padding="@dimen/margin_padding_size_12"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_create_wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_size_8"
                android:background="@drawable/blue_ripple_corners_8dp"
                android:clickable="true"
                android:elevation="@dimen/shadow_spread"
...
                    android:textSize="@dimen/edit_text_size_16"
                    app:fontFamily="@font/source_sans_pro" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_restore_wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_ripple_corner_8dp"
                android:padding="@dimen/margin_padding_size_16"
                android:layout_marginTop="@dimen/margin_padding_size_16"
                android:layout_marginBottom="@dimen/margin_padding_size_8"
...
